# unicornscan

./: .gitignore  AUTHORS  CLAUDE.md  HISTORY.md  INSTALL  INSTALL-source.md  Makefile.in  Makefile.inc  Makefile.inc.in  README  README.md  README.update  TODO  UDP_PAYLOADS_NEEDED  aclocal.m4  configure  configure.ac  libtool  tstamp
.claude/: settings.json
.claude/skills/: gh-release.md
.github/workflows/: release.yml
_bmad-output/planning-artifacts/: epics.md
alicorn/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  docker-compose.full.yml  docker-compose.standalone.yml  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
alicorn/cli/: setup.ts
alicorn/geoip-api/: Dockerfile  package.json  server.js
alicorn/postgres/: Dockerfile
alicorn/postgrest/: Dockerfile
alicorn/scripts/: build-oui-json.ts  docker-init.sh
alicorn/sql/: pgsql_schema.sql
alicorn/src/: App.tsx  index.css  main.tsx
alicorn/tests/: setup.ts  test-utils.tsx
arch/blackarch/: PKGBUILD  PR_DESCRIPTION.md  README.md  submit-to-blackarch.sh  unicornscan.install
debian/: changelog  conffiles  control  copyright  postinst  rules  unicornscan-alicorn  unicornscan-web  unicornscan.install
docs/: BUILD_VERIFICATION_REPORT.md  CODING_STANDARDS.md  FINGERPRINT_PACKET_STRUCTURES.md  FINGERPRINT_QUICK_REFERENCE.md  GETTING_STARTED.md  GETTING_STARTED_ALICORN.md  INSTALL-package.md  INSTALL-source.md  MODERNIZATION.md  Makefile.in  OS_FINGERPRINT_SPOOFING_ANALYSIS.md  PRD-mac-capture-local-network.md  PRD-v051-macos-hardening.md  README.geoip  TASKS-mac-capture-local-network.md  alicorn-packaging-design.md  jack-louis-coding-style-guide.md  multi-payload-tcp-plan.md  p0f-integration-recommendation.md  p0f-v3-research-analysis.md  p0f-v3-vs-v2-quick-reference.md  payload-module-api.md  payload-module-architecture.md  payload-protocol-specs.md  supabase-integration.md  unibrow.1  unicfgtst.1  unicornscan.1  unicornscan_man.tex
docs/architecture/: ADR-001-compound-mode-remote-targets.md  ADR-002-v0452-release-prep-decisions.md  COMPOUND-MODE-EDGE-CASES.md  COMPOUND-MODE-INDEX.md  COMPOUND-MODE-SUMMARY.md  COMPOUND-MODE-VALIDATION-CHECKLIST.md  MTR_MODE_DESIGN.md  README-COMPOUND-MODE.txt  README.md  compound-mode-flow-diagram.txt  decision-summary-compound-remote.md
docs/cluster/: CLUSTER_MODE_GUIDE.md  CLUSTER_PERFORMANCE_OPTIMIZATIONS.md  CLUSTER_SCALABILITY_ANALYSIS.md  CLUSTER_TEST_SPECIFICATION.md
docs/hard_fixes/: compound-mode-banner-fix.md
docs/man/: fantaip.1  unicorn.conf.5  unicornscan.1
docs/prds/: PRD_TOPOLOGY_ROUTING.md  PRD_TOPOLOGY_ROUTING_v2.md
docs/research/: README-config-analysis.md  README-fingerprint-7-analysis.md  README.md  TCP_OPTION_19_RESEARCH.md  arp-discovery-best-practices-analysis.md  arp-discovery-two-phase-architecture.md  arp-report-format-configuration-analysis.md  arp-scan-mode-analysis.md  autotools-architecture-analysis.md  compound-mode-remote-target-design.md  config-comparison-summary.txt  config-header-analysis.md  config-migration-checklist.txt  config-refactoring-executive-summary.md  config-verification-results.txt  configure-ac-evolution-analysis.md  fantaip-technical-analysis.md  fingerprint-7-buffer-layout.txt  fingerprint-7-bug-manifestation.md  fingerprint-7-executive-summary.md  fingerprint-7-fix-checklist.md  fingerprint-7-strangetcp-deep-analysis.md  format-string-expansion-system.md  geoip-database-handling-2025.md  ip-spoofing-modern-techniques.md  living-project-improvement-plan.md  local-vs-remote-network-detection.md  m4-macros-comparison-analysis.md  m4-macros-comparison-table.md  m4-macros-executive-summary.md  makefile-comparison-analysis.md  masscan-high-performance-techniques-analysis.md  mode-parsing-analysis.md  mode-parsing-code-snippets.md  mode-parsing-qa.md  myiphdr-bitfield-alignment-analysis.md  parallel-build-race-condition-analysis.md  pcap-sll-header-investigation.md  per-phase-settings-analysis.md  phase-transition-timing-analysis.md  (+20 more)
docs/specs/: scan-comparison-redesign.md
etc/: Makefile.in  modules.conf  oui.txt  payloads.conf  ports.txt  unicorn.conf
ext_src/: patricia.c  patricia.h
kali/: BUG_REPORT.md  MR_DESCRIPTION.md  README.md
kali/debian/: changelog  control  copyright  postinst  postrm  rules  unicornscan-alicorn  unicornscan-web  watch
libs/: Makefile.in  libdnet-tun-linux-uio.patch
m4/: ax_c___attribute__.m4  pcap.m4  unim4.m4
macos/: install-chmodbpf.sh  unicornscan-sender.sb  unicornscan.rb
macos/dmg/: README.txt  build-dmg.sh  postinstall  preinstall
rpm/: unicornscan.spec
scripts/: generate-db-password.sh  make-kali-tarball.sh  release.sh  unicornscan-geoip-update  update-iana-ports.py
scripts/simulation/: package-lock.json  package.json  unicornscan-sim.test.ts  unicornscan-sim.ts  us-sim
selinux/: unicornscan.fc
src/: Makefile.in  chld.c  compile.h  config.h.in  drone_setup.c  getconfig.c  main.c  packageinfo.h  packageinfo.h.in  settings.h  supabase_setup.c  supabase_setup.h  unicorn_defs.h
src/parse/: Makefile.in  lex.uu.c  parse.l  parse.tab.c  parse.tab.h  parse.y
src/payload_modules/: Makefile.in  dhcp.c  http.c  mongo.c  nbns.c  ntalk.c  stun.c  tls.c  tls_common.h  tls_default.c  websocket.c
src/scan_progs/: Makefile.in  banner_parse.c  banner_parse.h  connect.c  init_packet.c  makepkt.c  master.c  master.h  options.c  options.h  packet_parse.c  packet_parse.h  payload.c  phase_filter.c  phase_filter.h  portfunc.c  portfunc.h  recv_packet.c  report.c  report.h  scan_export.h  scanopts.c  scanopts.h  send_packet.c  trace_session.c  trace_session.h  workunits.c  workunits.h
src/tools/: Makefile.in  fantaip.c  fpdb.c
src/unilib/: Makefile.in  arch.c  arch.h  bsd-route.c  cidr.c  cidr.h  gtod.c  modules.c  modules.h  output.h  pcaputil.c  pcaputil.h  route.c  sleep.c  sockpath.c  sockpath.h  socktrans.c  standard_dns.c  tsc.c  xmalloc.c  xmalloc.h
tests/: docker-compose-payloads.yml  mosquitto.conf  test-payloads.sh
(+283 files in other folders)
